erDiagram
    tenants ||--o{ documents : owns
    documents ||--o{ document_versions : "has versions"
    documents ||--o{ document_reviews : "reviewed by"
    document_versions ||--o{ document_reviews : "version reviewed"
    documents ||--o{ document_expirations : tracks
    documents ||--o{ document_access_logs : logs
    tenants ||--o{ signature_templates : defines
    signature_templates ||--o{ signature_requests : "versioned by"
    signature_requests ||--o| signature_records : produces
    signature_requests ||--o{ signature_audit_events : logs
    signature_records ||--o{ signature_audit_events : "may reference"
    carriers ||--o{ signature_requests : "may be subject"
    documents ||--o| signature_records : "signed PDF stored as"

    documents {
        uuid id PK
        uuid tenant_id FK
        enum document_type
        varchar owner_type "polymorphic"
        uuid owner_id
        uuid current_version_id
        enum review_status
        timestamp expiration_date
    }
    document_versions {
        uuid id PK
        uuid document_id FK
        integer version_number
        text storage_key "tenants/{tenantId}/..."
        varchar sha256
        varchar malware_scan_status
    }
    signature_templates {
        uuid id PK
        uuid tenant_id FK
        varchar template_key
        integer version
        varchar content_hash
    }
    signature_requests {
        uuid id PK
        uuid template_id FK
        varchar subject_type "carrier|load|tenant"
        uuid subject_id
        enum status
        varchar access_token_hash UK
    }
    signature_records {
        uuid id PK
        uuid request_id FK, UK
        varchar integrity_seal "HMAC-SHA256, immutable"
        varchar document_sha256
        varchar signature_sha256
    }
    signature_audit_events {
        uuid id PK
        uuid request_id FK
        varchar event_type
        varchar previous_event_hash "hash chain"
        varchar event_hash UK
    }
